Commit after setting up take-home exercise 2 and editing section header for in-class exericse 6

--- a/In-class_Ex/In-class_Ex05/In-class_Ex05.qmd
+++ b/In-class_Ex/In-class_Ex05/In-class_Ex05.qmd
@@ -13,6 +13,8 @@ execute:
 editor: source
 ---
 
+# Overview: Global and Local Measures of Spatial Autocorrelation
+
 ## Getting Startted
 
 -   Introducing [**sfdep**](https://sfdep.josiahparry.com/index.html).
