--- a/In-class_Ex/In-class_Ex04/In-class_Ex04.qmd
+++ b/In-class_Ex/In-class_Ex04/In-class_Ex04.qmd
@@ -39,16 +39,20 @@ For this in-class exercise, Hunan shapefile and Hunan_2012 data file will be use
 
 ::: panel-tabset
 ## Importing Hunan shapefile
+
 ```{r}
 hunan_sf <- st_read(dsn = "data/geospatial", 
                  layer = "Hunan")
 ```
+
 Note CRS is not defined when importing the data and the CRS is WGS84.
 
 ## Importing the Hunan_2012 table
+
 ```{r}
 hunan2012 <- read_csv("data/aspatial/Hunan_2012.csv")
 ```
+
 Note: read_csv() is from the tidyverse package
 :::
 
@@ -58,6 +62,7 @@ Note: read_csv() is from the tidyverse package
 hunan_sf <- left_join(hunan_sf ,hunan2012) %>%
   select(1:3, 7, 15, 16, 31, 32)
 ```
+
 NAME_2, ID_3, NAME_3 (name of county), COUNTY, GDP, 26 - GIO, 31- Agri, 32- Service
 
 A selection is done in the code chunk above to select variables that will be used for analysis
@@ -109,11 +114,12 @@ bw_CV <- bw.gwr(GDPPC ~ 1, # arbitrary number 1 as independent variable
              kernel = "bisquare",
              longlat = T) # value taken in is in KM
 ```
+
 ```{r}
 bw_CV
 ```
 
-The score will eventually stop and the optimal number of neighbours is 22. This is also the same result if AIC is used. However, note that this will not always be the case for both approaches. 
+The score will eventually stop and the optimal number of neighbours is 22. This is also the same result if AIC is used. However, note that this will not always be the case for both approaches.
 
 ## AIC
 
@@ -125,9 +131,11 @@ bw_AIC <- bw.gwr(GDPPC ~ 1,
              kernel = "bisquare",
              longlat = T)
 ```
+
 ```{r}
 bw_AIC
 ```
+
 Change rate will stop and that is where the optimal value is determined Statistical method
 :::
 
@@ -160,10 +168,10 @@ hunan_gstat <- cbind(hunan_sf, gwstat_df)
 
 ## Visualising geographically weighted summary statistics
 
-::: panel-tabset
+::::: panel-tabset
 ## The Geographically Weighted Mean
 
-::: columns
+:::: columns
 ::: {.column width="50%"}
 ```{r}
 #| echo: false
@@ -181,7 +189,8 @@ tm_shape(hunan_gstat) +
             frame = TRUE)
 ```
 :::
-:::
+::::
+
 ## The code
 
 ```{r}
@@ -199,8 +208,7 @@ tm_shape(hunan_gstat) +
             legend.width = 1.50,
             frame = TRUE)
 ```
-
-:::
+:::::
 
 ## Geographically Weighted Summary Statistics with fixed bandwidth
 
@@ -218,10 +226,10 @@ bw_CV <- bw.gwr(GDPPC ~ 1,
              longlat = T)
 ```
 
-
 ```{r}
 bw_CV
 ```
+
 Value is in KM - 76 KM
 
 ## AIC
@@ -234,10 +242,10 @@ bw_AIC <- bw.gwr(GDPPC ~ 1,
              kernel = "bisquare",
              longlat = T)
 ```
+
 ```{r}
 bw_AIC
 ```
-
 :::
 
 When using different methods (i.e Adaptive / Fixed) some would give the same answer while some would otherwise give a different answer. So it is a good practice to test out the different methods
@@ -340,7 +348,6 @@ From the p-value it can be observed that there is a relatively strong correlatio
 ### Geospatial analytics solution
 
 ::: panel-tabset
-
 ## Determining the bandwidth
 
 ```{r}
@@ -360,7 +367,6 @@ gwstats <- gwss(hunan_sp,
                 adaptive = TRUE, 
                 longlat = T)
 ```
-
 :::
 
 ### Extracting the result
@@ -392,7 +398,7 @@ The 1st band not as correlated with its neighbours
 
 Local correlation can also be shown
 
-::: panel-tabset
+:::: panel-tabset
 ### Local Correlation Coefficient
 
 ```{r}
@@ -450,10 +456,10 @@ tm_shape(hunan_Corr) +
             frame = TRUE)
 ```
 :::
-:::
+::::
 
 ## Learning Pointers
 
 Additional learning on on usage of using GWmodel and approach on using various methods for analyis based on the context and requirement of the task on hand.
 
-e.g. for certain cases – China – for supply chain companies they would need to use road network as opposed to flying as an option . 
+e.g. for certain cases – China – for supply chain companies they would need to use road network as opposed to flying as an option .
